--- a/HovText/Settings.resx
+++ b/HovText/Settings.resx
@@ -874,6 +874,212 @@
         3W73UnKMQzxnaGiIQ5aMPWfJkSNHlnj7QtD/ACy7owO0sDT4AAAAAElFTkSuQmCC
 </value>
   </data>
+  <data name="guna2PictureBox7.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAS
+        cQAAEnEB89x6jgAAABl0RVh0U29mdHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAAQ1SURBVFhH7Vdb
+        SJNhGHa/mi43j6HoFOepEqILZ2QhKTWtjXlEqOVUEAVRL1J0CeLZTLoRopsuCooOlxXmyCyioCNEIGLR
+        ZXVV3YmHbLqe58tv/FvDjlexi4d/7/O97/M937tv+74/xOPxbIq+vj4Nn/X19ZlarXY2NDR0RVGURWAJ
+        WN4APy9ibDkiIuKN3W7fra7dDAHJgYEBTX9/vwIBZXBwUOno6NgWHx//NATpv4KYmJjZ1tZWw9DQkNCg
+        FjUDzfUDwWR/rrS09DiFDQbDtMViOWo2m+0lJSXHJDB+jJzVaq0xGo03mVtcXNzmrxNI2yeQaGlpSXM4
+        HPuA/Y2NjXtyc3PPQnQtLy/vTHt7+w5wu5qamnLVINfW1rYTOf3MRc0F1lKntrZ2HzSNgebyfpDusCJ7
+        WFjYR4i4KaR6rgPeNv8EzFXXurE/PhcVFbVszOX9OrwGiO7u7sioqKi3KPBoNJpVYA2b6yuebgnEm8I/
+        F881YJWa2KDvsZ/i1HP6GEB7DVj9ZybT9cbzX0BoQfsT51DP6WOgp6cnsqam5kBsbOwDFKwnJSU9rqqq
+        KqmsrDxcXV19iKioqLCUl5cfAXcE8UGC4+AsGCMn8sih1gyNu9SC5gtqcw71nD4GJFJTUy/TcU5Ozg3G
+        2PmVycnJ97Ozs8/LHGy41JSUlEnwroaGhp2SR84Ec1HjYAyNi9SC5i2Zo4ZPwN/syMiIgp/bdbrOzMx0
+        jY+PK/n5+dzZ/A7fdXV1xY6OjirY3QXkCHZkbGxMwVgUcubIoWaCtdC4Ri1ouoaHh8X/gnpOHwPyl4Bk
+        FnmysrJuMy4oKHAiduv1+jmn06kjh1WbsMmWuNnYcnIYi0QO/7DcqDlFDhpXqAXNKcb+/wUBDaBd7AAN
+        iCKInWSs0+nmMYmeHP6aTeBWgHV818IAf0XIec5c1JwmB42rjKHpYvynBnoYY3WvpQF0IB+r/0IeHTCT
+        w5gWOS+CBoIGggaCBoIG/gsD4jTEUSoNiMMI4t7DCAZMMMDDiAbUp6E8jMbI/W0H5HEsOsDTECeetwPg
+        5GkoOoAxrf9piEWI4xiaYjF/2gEnVvs1Ojp6Thrgcex/H6AB5DxlLmrEfQAasgO/ZEBcl3F5YNE6OiCu
+        USaTaYAi4eHhHzBJDLm6urq95AjeBclhbCty5smhZoIcNC4x/q0OZGRk0MBaYmLiw97e3i3Nzc1Gm81W
+        hZUW4VIpTHZ2dupwFbOWlZXZcD/0XrWRs5+5eFnZjtexUEw8SS3cH8XXKRcp4f1AyPtaYWHhCboGVuLi
+        4l6lpaXdwyvXVHp6+h3elGHsCS6ej8C5yEP8ITmOIWeaHGpmEhISXvJrohbemIbUc0j4GJDAKrdCcGbD
+        xF8Di3iGF5L4QHP9QKiBK/YZCPDtZgFYJBBzRQKIBfw4kQcsIHajG+cCaX+HJ+QbfAAetVMTVeEAAAAA
+        SUVORK5CYII=
+</value>
+  </data>
+  <data name="guna2PictureBox8.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAS
+        cQAAEnEB89x6jgAAABl0RVh0U29mdHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAAQ1SURBVFhH7Vdb
+        SJNhGHa/mi43j6HoFOepEqILZ2QhKTWtjXlEqOVUEAVRL1J0CeLZTLoRopsuCooOlxXmyCyioCNEIGLR
+        ZXVV3YmHbLqe58tv/FvDjlexi4d/7/O97/M937tv+74/xOPxbIq+vj4Nn/X19ZlarXY2NDR0RVGURWAJ
+        WN4APy9ibDkiIuKN3W7fra7dDAHJgYEBTX9/vwIBZXBwUOno6NgWHx//NATpv4KYmJjZ1tZWw9DQkNCg
+        FjUDzfUDwWR/rrS09DiFDQbDtMViOWo2m+0lJSXHJDB+jJzVaq0xGo03mVtcXNzmrxNI2yeQaGlpSXM4
+        HPuA/Y2NjXtyc3PPQnQtLy/vTHt7+w5wu5qamnLVINfW1rYTOf3MRc0F1lKntrZ2HzSNgebyfpDusCJ7
+        WFjYR4i4KaR6rgPeNv8EzFXXurE/PhcVFbVszOX9OrwGiO7u7sioqKi3KPBoNJpVYA2b6yuebgnEm8I/
+        F881YJWa2KDvsZ/i1HP6GEB7DVj9ZybT9cbzX0BoQfsT51DP6WOgp6cnsqam5kBsbOwDFKwnJSU9rqqq
+        KqmsrDxcXV19iKioqLCUl5cfAXcE8UGC4+AsGCMn8sih1gyNu9SC5gtqcw71nD4GJFJTUy/TcU5Ozg3G
+        2PmVycnJ97Ozs8/LHGy41JSUlEnwroaGhp2SR84Ec1HjYAyNi9SC5i2Zo4ZPwN/syMiIgp/bdbrOzMx0
+        jY+PK/n5+dzZ/A7fdXV1xY6OjirY3QXkCHZkbGxMwVgUcubIoWaCtdC4Ri1ouoaHh8X/gnpOHwPyl4Bk
+        FnmysrJuMy4oKHAiduv1+jmn06kjh1WbsMmWuNnYcnIYi0QO/7DcqDlFDhpXqAXNKcb+/wUBDaBd7AAN
+        iCKInWSs0+nmMYmeHP6aTeBWgHV818IAf0XIec5c1JwmB42rjKHpYvynBnoYY3WvpQF0IB+r/0IeHTCT
+        w5gWOS+CBoIGggaCBoIG/gsD4jTEUSoNiMMI4t7DCAZMMMDDiAbUp6E8jMbI/W0H5HEsOsDTECeetwPg
+        5GkoOoAxrf9piEWI4xiaYjF/2gEnVvs1Ojp6Thrgcex/H6AB5DxlLmrEfQAasgO/ZEBcl3F5YNE6OiCu
+        USaTaYAi4eHhHzBJDLm6urq95AjeBclhbCty5smhZoIcNC4x/q0OZGRk0MBaYmLiw97e3i3Nzc1Gm81W
+        hZUW4VIpTHZ2dupwFbOWlZXZcD/0XrWRs5+5eFnZjtexUEw8SS3cH8XXKRcp4f1AyPtaYWHhCboGVuLi
+        4l6lpaXdwyvXVHp6+h3elGHsCS6ej8C5yEP8ITmOIWeaHGpmEhISXvJrohbemIbUc0j4GJDAKrdCcGbD
+        xF8Di3iGF5L4QHP9QKiBK/YZCPDtZgFYJBBzRQKIBfw4kQcsIHajG+cCaX+HJ+QbfAAetVMTVeEAAAAA
+        SUVORK5CYII=
+</value>
+  </data>
+  <data name="guna2PictureBox4.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAS
+        cQAAEnEB89x6jgAAABl0RVh0U29mdHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAAQ1SURBVFhH7Vdb
+        SJNhGHa/mi43j6HoFOepEqILZ2QhKTWtjXlEqOVUEAVRL1J0CeLZTLoRopsuCooOlxXmyCyioCNEIGLR
+        ZXVV3YmHbLqe58tv/FvDjlexi4d/7/O97/M937tv+74/xOPxbIq+vj4Nn/X19ZlarXY2NDR0RVGURWAJ
+        WN4APy9ibDkiIuKN3W7fra7dDAHJgYEBTX9/vwIBZXBwUOno6NgWHx//NATpv4KYmJjZ1tZWw9DQkNCg
+        FjUDzfUDwWR/rrS09DiFDQbDtMViOWo2m+0lJSXHJDB+jJzVaq0xGo03mVtcXNzmrxNI2yeQaGlpSXM4
+        HPuA/Y2NjXtyc3PPQnQtLy/vTHt7+w5wu5qamnLVINfW1rYTOf3MRc0F1lKntrZ2HzSNgebyfpDusCJ7
+        WFjYR4i4KaR6rgPeNv8EzFXXurE/PhcVFbVszOX9OrwGiO7u7sioqKi3KPBoNJpVYA2b6yuebgnEm8I/
+        F881YJWa2KDvsZ/i1HP6GEB7DVj9ZybT9cbzX0BoQfsT51DP6WOgp6cnsqam5kBsbOwDFKwnJSU9rqqq
+        KqmsrDxcXV19iKioqLCUl5cfAXcE8UGC4+AsGCMn8sih1gyNu9SC5gtqcw71nD4GJFJTUy/TcU5Ozg3G
+        2PmVycnJ97Ozs8/LHGy41JSUlEnwroaGhp2SR84Ec1HjYAyNi9SC5i2Zo4ZPwN/syMiIgp/bdbrOzMx0
+        jY+PK/n5+dzZ/A7fdXV1xY6OjirY3QXkCHZkbGxMwVgUcubIoWaCtdC4Ri1ouoaHh8X/gnpOHwPyl4Bk
+        FnmysrJuMy4oKHAiduv1+jmn06kjh1WbsMmWuNnYcnIYi0QO/7DcqDlFDhpXqAXNKcb+/wUBDaBd7AAN
+        iCKInWSs0+nmMYmeHP6aTeBWgHV818IAf0XIec5c1JwmB42rjKHpYvynBnoYY3WvpQF0IB+r/0IeHTCT
+        w5gWOS+CBoIGggaCBoIG/gsD4jTEUSoNiMMI4t7DCAZMMMDDiAbUp6E8jMbI/W0H5HEsOsDTECeetwPg
+        5GkoOoAxrf9piEWI4xiaYjF/2gEnVvs1Ojp6Thrgcex/H6AB5DxlLmrEfQAasgO/ZEBcl3F5YNE6OiCu
+        USaTaYAi4eHhHzBJDLm6urq95AjeBclhbCty5smhZoIcNC4x/q0OZGRk0MBaYmLiw97e3i3Nzc1Gm81W
+        hZUW4VIpTHZ2dupwFbOWlZXZcD/0XrWRs5+5eFnZjtexUEw8SS3cH8XXKRcp4f1AyPtaYWHhCboGVuLi
+        4l6lpaXdwyvXVHp6+h3elGHsCS6ej8C5yEP8ITmOIWeaHGpmEhISXvJrohbemIbUc0j4GJDAKrdCcGbD
+        xF8Di3iGF5L4QHP9QKiBK/YZCPDtZgFYJBBzRQKIBfw4kQcsIHajG+cCaX+HJ+QbfAAetVMTVeEAAAAA
+        SUVORK5CYII=
+</value>
+  </data>
+  <data name="guna2PictureBox5.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAS
+        cQAAEnEB89x6jgAAABl0RVh0U29mdHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAAQ1SURBVFhH7Vdb
+        SJNhGHa/mi43j6HoFOepEqILZ2QhKTWtjXlEqOVUEAVRL1J0CeLZTLoRopsuCooOlxXmyCyioCNEIGLR
+        ZXVV3YmHbLqe58tv/FvDjlexi4d/7/O97/M937tv+74/xOPxbIq+vj4Nn/X19ZlarXY2NDR0RVGURWAJ
+        WN4APy9ibDkiIuKN3W7fra7dDAHJgYEBTX9/vwIBZXBwUOno6NgWHx//NATpv4KYmJjZ1tZWw9DQkNCg
+        FjUDzfUDwWR/rrS09DiFDQbDtMViOWo2m+0lJSXHJDB+jJzVaq0xGo03mVtcXNzmrxNI2yeQaGlpSXM4
+        HPuA/Y2NjXtyc3PPQnQtLy/vTHt7+w5wu5qamnLVINfW1rYTOf3MRc0F1lKntrZ2HzSNgebyfpDusCJ7
+        WFjYR4i4KaR6rgPeNv8EzFXXurE/PhcVFbVszOX9OrwGiO7u7sioqKi3KPBoNJpVYA2b6yuebgnEm8I/
+        F881YJWa2KDvsZ/i1HP6GEB7DVj9ZybT9cbzX0BoQfsT51DP6WOgp6cnsqam5kBsbOwDFKwnJSU9rqqq
+        KqmsrDxcXV19iKioqLCUl5cfAXcE8UGC4+AsGCMn8sih1gyNu9SC5gtqcw71nD4GJFJTUy/TcU5Ozg3G
+        2PmVycnJ97Ozs8/LHGy41JSUlEnwroaGhp2SR84Ec1HjYAyNi9SC5i2Zo4ZPwN/syMiIgp/bdbrOzMx0
+        jY+PK/n5+dzZ/A7fdXV1xY6OjirY3QXkCHZkbGxMwVgUcubIoWaCtdC4Ri1ouoaHh8X/gnpOHwPyl4Bk
+        FnmysrJuMy4oKHAiduv1+jmn06kjh1WbsMmWuNnYcnIYi0QO/7DcqDlFDhpXqAXNKcb+/wUBDaBd7AAN
+        iCKInWSs0+nmMYmeHP6aTeBWgHV818IAf0XIec5c1JwmB42rjKHpYvynBnoYY3WvpQF0IB+r/0IeHTCT
+        w5gWOS+CBoIGggaCBoIG/gsD4jTEUSoNiMMI4t7DCAZMMMDDiAbUp6E8jMbI/W0H5HEsOsDTECeetwPg
+        5GkoOoAxrf9piEWI4xiaYjF/2gEnVvs1Ojp6Thrgcex/H6AB5DxlLmrEfQAasgO/ZEBcl3F5YNE6OiCu
+        USaTaYAi4eHhHzBJDLm6urq95AjeBclhbCty5smhZoIcNC4x/q0OZGRk0MBaYmLiw97e3i3Nzc1Gm81W
+        hZUW4VIpTHZ2dupwFbOWlZXZcD/0XrWRs5+5eFnZjtexUEw8SS3cH8XXKRcp4f1AyPtaYWHhCboGVuLi
+        4l6lpaXdwyvXVHp6+h3elGHsCS6ej8C5yEP8ITmOIWeaHGpmEhISXvJrohbemIbUc0j4GJDAKrdCcGbD
+        xF8Di3iGF5L4QHP9QKiBK/YZCPDtZgFYJBBzRQKIBfw4kQcsIHajG+cCaX+HJ+QbfAAetVMTVeEAAAAA
+        SUVORK5CYII=
+</value>
+  </data>
+  <data name="guna2PictureBox6.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAS
+        cQAAEnEB89x6jgAAABl0RVh0U29mdHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAAQ1SURBVFhH7Vdb
+        SJNhGHa/mi43j6HoFOepEqILZ2QhKTWtjXlEqOVUEAVRL1J0CeLZTLoRopsuCooOlxXmyCyioCNEIGLR
+        ZXVV3YmHbLqe58tv/FvDjlexi4d/7/O97/M937tv+74/xOPxbIq+vj4Nn/X19ZlarXY2NDR0RVGURWAJ
+        WN4APy9ibDkiIuKN3W7fra7dDAHJgYEBTX9/vwIBZXBwUOno6NgWHx//NATpv4KYmJjZ1tZWw9DQkNCg
+        FjUDzfUDwWR/rrS09DiFDQbDtMViOWo2m+0lJSXHJDB+jJzVaq0xGo03mVtcXNzmrxNI2yeQaGlpSXM4
+        HPuA/Y2NjXtyc3PPQnQtLy/vTHt7+w5wu5qamnLVINfW1rYTOf3MRc0F1lKntrZ2HzSNgebyfpDusCJ7
+        WFjYR4i4KaR6rgPeNv8EzFXXurE/PhcVFbVszOX9OrwGiO7u7sioqKi3KPBoNJpVYA2b6yuebgnEm8I/
+        F881YJWa2KDvsZ/i1HP6GEB7DVj9ZybT9cbzX0BoQfsT51DP6WOgp6cnsqam5kBsbOwDFKwnJSU9rqqq
+        KqmsrDxcXV19iKioqLCUl5cfAXcE8UGC4+AsGCMn8sih1gyNu9SC5gtqcw71nD4GJFJTUy/TcU5Ozg3G
+        2PmVycnJ97Ozs8/LHGy41JSUlEnwroaGhp2SR84Ec1HjYAyNi9SC5i2Zo4ZPwN/syMiIgp/bdbrOzMx0
+        jY+PK/n5+dzZ/A7fdXV1xY6OjirY3QXkCHZkbGxMwVgUcubIoWaCtdC4Ri1ouoaHh8X/gnpOHwPyl4Bk
+        FnmysrJuMy4oKHAiduv1+jmn06kjh1WbsMmWuNnYcnIYi0QO/7DcqDlFDhpXqAXNKcb+/wUBDaBd7AAN
+        iCKInWSs0+nmMYmeHP6aTeBWgHV818IAf0XIec5c1JwmB42rjKHpYvynBnoYY3WvpQF0IB+r/0IeHTCT
+        w5gWOS+CBoIGggaCBoIG/gsD4jTEUSoNiMMI4t7DCAZMMMDDiAbUp6E8jMbI/W0H5HEsOsDTECeetwPg
+        5GkoOoAxrf9piEWI4xiaYjF/2gEnVvs1Ojp6Thrgcex/H6AB5DxlLmrEfQAasgO/ZEBcl3F5YNE6OiCu
+        USaTaYAi4eHhHzBJDLm6urq95AjeBclhbCty5smhZoIcNC4x/q0OZGRk0MBaYmLiw97e3i3Nzc1Gm81W
+        hZUW4VIpTHZ2dupwFbOWlZXZcD/0XrWRs5+5eFnZjtexUEw8SS3cH8XXKRcp4f1AyPtaYWHhCboGVuLi
+        4l6lpaXdwyvXVHp6+h3elGHsCS6ej8C5yEP8ITmOIWeaHGpmEhISXvJrohbemIbUc0j4GJDAKrdCcGbD
+        xF8Di3iGF5L4QHP9QKiBK/YZCPDtZgFYJBBzRQKIBfw4kQcsIHajG+cCaX+HJ+QbfAAetVMTVeEAAAAA
+        SUVORK5CYII=
+</value>
+  </data>
+  <data name="guna2PictureBox3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAS
+        cQAAEnEB89x6jgAAABl0RVh0U29mdHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAAQ1SURBVFhH7Vdb
+        SJNhGHa/mi43j6HoFOepEqILZ2QhKTWtjXlEqOVUEAVRL1J0CeLZTLoRopsuCooOlxXmyCyioCNEIGLR
+        ZXVV3YmHbLqe58tv/FvDjlexi4d/7/O97/M937tv+74/xOPxbIq+vj4Nn/X19ZlarXY2NDR0RVGURWAJ
+        WN4APy9ibDkiIuKN3W7fra7dDAHJgYEBTX9/vwIBZXBwUOno6NgWHx//NATpv4KYmJjZ1tZWw9DQkNCg
+        FjUDzfUDwWR/rrS09DiFDQbDtMViOWo2m+0lJSXHJDB+jJzVaq0xGo03mVtcXNzmrxNI2yeQaGlpSXM4
+        HPuA/Y2NjXtyc3PPQnQtLy/vTHt7+w5wu5qamnLVINfW1rYTOf3MRc0F1lKntrZ2HzSNgebyfpDusCJ7
+        WFjYR4i4KaR6rgPeNv8EzFXXurE/PhcVFbVszOX9OrwGiO7u7sioqKi3KPBoNJpVYA2b6yuebgnEm8I/
+        F881YJWa2KDvsZ/i1HP6GEB7DVj9ZybT9cbzX0BoQfsT51DP6WOgp6cnsqam5kBsbOwDFKwnJSU9rqqq
+        KqmsrDxcXV19iKioqLCUl5cfAXcE8UGC4+AsGCMn8sih1gyNu9SC5gtqcw71nD4GJFJTUy/TcU5Ozg3G
+        2PmVycnJ97Ozs8/LHGy41JSUlEnwroaGhp2SR84Ec1HjYAyNi9SC5i2Zo4ZPwN/syMiIgp/bdbrOzMx0
+        jY+PK/n5+dzZ/A7fdXV1xY6OjirY3QXkCHZkbGxMwVgUcubIoWaCtdC4Ri1ouoaHh8X/gnpOHwPyl4Bk
+        FnmysrJuMy4oKHAiduv1+jmn06kjh1WbsMmWuNnYcnIYi0QO/7DcqDlFDhpXqAXNKcb+/wUBDaBd7AAN
+        iCKInWSs0+nmMYmeHP6aTeBWgHV818IAf0XIec5c1JwmB42rjKHpYvynBnoYY3WvpQF0IB+r/0IeHTCT
+        w5gWOS+CBoIGggaCBoIG/gsD4jTEUSoNiMMI4t7DCAZMMMDDiAbUp6E8jMbI/W0H5HEsOsDTECeetwPg
+        5GkoOoAxrf9piEWI4xiaYjF/2gEnVvs1Ojp6Thrgcex/H6AB5DxlLmrEfQAasgO/ZEBcl3F5YNE6OiCu
+        USaTaYAi4eHhHzBJDLm6urq95AjeBclhbCty5smhZoIcNC4x/q0OZGRk0MBaYmLiw97e3i3Nzc1Gm81W
+        hZUW4VIpTHZ2dupwFbOWlZXZcD/0XrWRs5+5eFnZjtexUEw8SS3cH8XXKRcp4f1AyPtaYWHhCboGVuLi
+        4l6lpaXdwyvXVHp6+h3elGHsCS6ej8C5yEP8ITmOIWeaHGpmEhISXvJrohbemIbUc0j4GJDAKrdCcGbD
+        xF8Di3iGF5L4QHP9QKiBK/YZCPDtZgFYJBBzRQKIBfw4kQcsIHajG+cCaX+HJ+QbfAAetVMTVeEAAAAA
+        SUVORK5CYII=
+</value>
+  </data>
+  <data name="guna2PictureBox2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAS
+        cQAAEnEB89x6jgAAABl0RVh0U29mdHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAAQ1SURBVFhH7Vdb
+        SJNhGHa/mi43j6HoFOepEqILZ2QhKTWtjXlEqOVUEAVRL1J0CeLZTLoRopsuCooOlxXmyCyioCNEIGLR
+        ZXVV3YmHbLqe58tv/FvDjlexi4d/7/O97/M937tv+74/xOPxbIq+vj4Nn/X19ZlarXY2NDR0RVGURWAJ
+        WN4APy9ibDkiIuKN3W7fra7dDAHJgYEBTX9/vwIBZXBwUOno6NgWHx//NATpv4KYmJjZ1tZWw9DQkNCg
+        FjUDzfUDwWR/rrS09DiFDQbDtMViOWo2m+0lJSXHJDB+jJzVaq0xGo03mVtcXNzmrxNI2yeQaGlpSXM4
+        HPuA/Y2NjXtyc3PPQnQtLy/vTHt7+w5wu5qamnLVINfW1rYTOf3MRc0F1lKntrZ2HzSNgebyfpDusCJ7
+        WFjYR4i4KaR6rgPeNv8EzFXXurE/PhcVFbVszOX9OrwGiO7u7sioqKi3KPBoNJpVYA2b6yuebgnEm8I/
+        F881YJWa2KDvsZ/i1HP6GEB7DVj9ZybT9cbzX0BoQfsT51DP6WOgp6cnsqam5kBsbOwDFKwnJSU9rqqq
+        KqmsrDxcXV19iKioqLCUl5cfAXcE8UGC4+AsGCMn8sih1gyNu9SC5gtqcw71nD4GJFJTUy/TcU5Ozg3G
+        2PmVycnJ97Ozs8/LHGy41JSUlEnwroaGhp2SR84Ec1HjYAyNi9SC5i2Zo4ZPwN/syMiIgp/bdbrOzMx0
+        jY+PK/n5+dzZ/A7fdXV1xY6OjirY3QXkCHZkbGxMwVgUcubIoWaCtdC4Ri1ouoaHh8X/gnpOHwPyl4Bk
+        FnmysrJuMy4oKHAiduv1+jmn06kjh1WbsMmWuNnYcnIYi0QO/7DcqDlFDhpXqAXNKcb+/wUBDaBd7AAN
+        iCKInWSs0+nmMYmeHP6aTeBWgHV818IAf0XIec5c1JwmB42rjKHpYvynBnoYY3WvpQF0IB+r/0IeHTCT
+        w5gWOS+CBoIGggaCBoIG/gsD4jTEUSoNiMMI4t7DCAZMMMDDiAbUp6E8jMbI/W0H5HEsOsDTECeetwPg
+        5GkoOoAxrf9piEWI4xiaYjF/2gEnVvs1Ojp6Thrgcex/H6AB5DxlLmrEfQAasgO/ZEBcl3F5YNE6OiCu
+        USaTaYAi4eHhHzBJDLm6urq95AjeBclhbCty5smhZoIcNC4x/q0OZGRk0MBaYmLiw97e3i3Nzc1Gm81W
+        hZUW4VIpTHZ2dupwFbOWlZXZcD/0XrWRs5+5eFnZjtexUEw8SS3cH8XXKRcp4f1AyPtaYWHhCboGVuLi
+        4l6lpaXdwyvXVHp6+h3elGHsCS6ej8C5yEP8ITmOIWeaHGpmEhISXvJrohbemIbUc0j4GJDAKrdCcGbD
+        xF8Di3iGF5L4QHP9QKiBK/YZCPDtZgFYJBBzRQKIBfw4kQcsIHajG+cCaX+HJ+QbfAAetVMTVeEAAAAA
+        SUVORK5CYII=
+</value>
+  </data>
+  <data name="guna2PictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAS
+        cgAAEnIBXmVb4wAAABl0RVh0U29mdHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAAQ1SURBVFhH7Vdb
+        SJNhGHa/mi43j6HoFOepEqILZ2QhKTWtjXlEqOVUEAVRL1J0CeLZTLoRopsuCooOlxXmyCyioCNEIGLR
+        ZXVV3YmHbLqe58tv/FvDjlexi4d/7/O97/M937tv+74/xOPxbIq+vj4Nn/X19ZlarXY2NDR0RVGURWAJ
+        WN4APy9ibDkiIuKN3W7fra7dDAHJgYEBTX9/vwIBZXBwUOno6NgWHx//NATpv4KYmJjZ1tZWw9DQkNCg
+        FjUDzfUDwWR/rrS09DiFDQbDtMViOWo2m+0lJSXHJDB+jJzVaq0xGo03mVtcXNzmrxNI2yeQaGlpSXM4
+        HPuA/Y2NjXtyc3PPQnQtLy/vTHt7+w5wu5qamnLVINfW1rYTOf3MRc0F1lKntrZ2HzSNgebyfpDusCJ7
+        WFjYR4i4KaR6rgPeNv8EzFXXurE/PhcVFbVszOX9OrwGiO7u7sioqKi3KPBoNJpVYA2b6yuebgnEm8I/
+        F881YJWa2KDvsZ/i1HP6GEB7DVj9ZybT9cbzX0BoQfsT51DP6WOgp6cnsqam5kBsbOwDFKwnJSU9rqqq
+        KqmsrDxcXV19iKioqLCUl5cfAXcE8UGC4+AsGCMn8sih1gyNu9SC5gtqcw71nD4GJFJTUy/TcU5Ozg3G
+        2PmVycnJ97Ozs8/LHGy41JSUlEnwroaGhp2SR84Ec1HjYAyNi9SC5i2Zo4ZPwN/syMiIgp/bdbrOzMx0
+        jY+PK/n5+dzZ/A7fdXV1xY6OjirY3QXkCHZkbGxMwVgUcubIoWaCtdC4Ri1ouoaHh8X/gnpOHwPyl4Bk
+        FnmysrJuMy4oKHAiduv1+jmn06kjh1WbsMmWuNnYcnIYi0QO/7DcqDlFDhpXqAXNKcb+/wUBDaBd7AAN
+        iCKInWSs0+nmMYmeHP6aTeBWgHV818IAf0XIec5c1JwmB42rjKHpYvynBnoYY3WvpQF0IB+r/0IeHTCT
+        w5gWOS+CBoIGggaCBoIG/gsD4jTEUSoNiMMI4t7DCAZMMMDDiAbUp6E8jMbI/W0H5HEsOsDTECeetwPg
+        5GkoOoAxrf9piEWI4xiaYjF/2gEnVvs1Ojp6Thrgcex/H6AB5DxlLmrEfQAasgO/ZEBcl3F5YNE6OiCu
+        USaTaYAi4eHhHzBJDLm6urq95AjeBclhbCty5smhZoIcNC4x/q0OZGRk0MBaYmLiw97e3i3Nzc1Gm81W
+        hZUW4VIpTHZ2dupwFbOWlZXZcD/0XrWRs5+5eFnZjtexUEw8SS3cH8XXKRcp4f1AyPtaYWHhCboGVuLi
+        4l6lpaXdwyvXVHp6+h3elGHsCS6ej8C5yEP8ITmOIWeaHGpmEhISXvJrohbemIbUc0j4GJDAKrdCcGbD
+        xF8Di3iGF5L4QHP9QKiBK/YZCPDtZgFYJBBzRQKIBfw4kQcsIHajG+cCaX+HJ+QbfAAetVMTVeEAAAAA
+        SUVORK5CYII=
+</value>
+  </data>
+  <data name="guna2HtmlLabel2.Text" xml:space="preserve">
+    <value>You can specify up to 8 applications in which you do &lt;i&gt;not&lt;/i&gt; want HovText to be active in. This could be in e.g. a password manager or in "problematic" applications like Microsoft Excel. 
+Please view the &lt;a href="https://hovtext.com"&gt;Documentation&lt;/a&gt; on how to fill in the details.&lt;br /&gt;&lt;br /&gt;
+
+HovText will not do any processing in the below listed applications.</value>
+  </data>
   <data name="UiAdvancedPicture2BoxDevRefresh.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
