--- a/HovText/Settings.resx
+++ b/HovText/Settings.resx
@@ -2495,6 +2495,9 @@ Jesper and Dennis</value>
   <metadata name="TimerUpdateCounters.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>220, 138</value>
   </metadata>
+  <metadata name="TimerNotificationClipboardList.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>425, 138</value>
+  </metadata>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>194</value>
   </metadata>
